# Elvis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  pyproject.toml
.github/workflows/: lint.yml
api/: api_models.py  endpoints.py
core/: config.py
db/: crud.py  database.py  db_models.py  stats.py
tests/: conftest.py  test_api.py
